--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Пари и Култура</title>
+  <title>Money and culture</title>
 
 </head>
 
