--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,16 @@
 
   <title>Money and culture</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0S1RVRC3QW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0S1RVRC3QW');
+  </script>
+
 </head>
 
 <body>
